--- a/phd_to_html/index.html
+++ b/phd_to_html/index.html
@@ -216,7 +216,7 @@
 	                    <div class="single-about-area">
 	                      <p> Higher education, also called tertiary, third stage, postsecondary education, is the non-compulsory educational level that follows the completion of a school such as a high school.</p>
 	                    </div> 
-                    <a href="https://www.youtube.com/watch?v=g7AurPS8-kM" class="video-play-btn mfp-iframe"><i class="far fa-play-circle"></i>Watch Video</a>
+                    <a href="https://www.youtube.com/watch?v=ScMzIvxBSi4" class="video-play-btn mfp-iframe"><i class="far fa-play-circle"></i>Watch Video</a>
                 	</div>
                 </div>
               </div>
@@ -292,7 +292,7 @@
 			<!--Event-area start-->
 
           <!--Footer-area Start-->
-          <div class="section-about footer-area"> 
+            <div class="section-about footer-area"> 
               <div class="container">
                 <div class="row">
                   <div class="col-lg-3"> 
@@ -303,12 +303,10 @@
                   </div>
                   <div class="col-lg-3"></div>
                   <div class="col-lg-3"> 
-                    <div class="footer-wid"> 
                       <h3> Contact</h3>
-                      <p><i class="fas fa-phone"></i>(283) 442-9619</p>
-                      <p><i class="fas fa-envelope"></i> contact@mopo.com</p>
-                      <p><i class="fas fa-map-marker-alt"></i>658 Parker Hill,</br>East Pamela, MS 645 </p>
-                    </div>
+                      <p class="content-text"><i class="fas fa-phone"></i>(283) 442-9619</p>
+                      <p class="content-text"><i class="fas fa-envelope"></i> contact@mopo.com</p>
+                      <p class="content-text"><i class="fas fa-map-marker-alt"></i>658 Parker Hill,</br>East Pamela, MS 645</p>
                   </div>
                   <div class="col-lg-3"> 
                       <div class="footer-wid"> 
