--- a/new-web/about.html
+++ b/new-web/about.html
@@ -55,7 +55,7 @@
                     <div class="row justify-content-center">
                         <div class="col-lg-8 text-center">
                             <h2>About Us</h2>
-                            <a href="">University Home  </a>About Us
+                            <a href="">University Home <i class="fas fa-angle-right"></i> </a>About Us
                         </div>
                     </div>
                 </div>
